--- a/week03/countrystyles/design.css
+++ b/week03/countrystyles/design.css
@@ -28,6 +28,10 @@ main {
     grid-template-columns: 1fr 200px;
 }
 
+section {
+    padding: 1rem;
+}
+
 h2 {
     color: navy;
     text-align: left;
@@ -48,7 +52,7 @@ article p {
 
 footer {
     margin-top: 1rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(0 0 0 / 0.1);
     font-size: smaller;
     text-align: left;
 }
