--- a/styles/place.css
+++ b/styles/place.css
@@ -1,4 +1,5 @@
 /* Mobile view */
+
 h1,
 section,
 footer,
@@ -8,6 +9,10 @@ picture {
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    
+}
+h1 {
+    color: white;
 }
 
 li {
@@ -15,12 +20,14 @@ li {
 }
 
 header {
-    background-color: green;
+    background-color: rgb(4, 185, 4);
     padding: 1px;
 }
 
 footer {
-    background-color: green;
+    background-color: rgb(4, 185, 4);
+    color: white;
+    font-size: larger;
 }
 
 picture img {
@@ -29,7 +36,7 @@ picture img {
     margin-top: 0;
 }
 
-#boldy {
+span {
     font-weight: bolder;
 }
 
@@ -66,37 +73,42 @@ picture img {
 
     .straight {
         display: flex;
-        background-color: rgba(247, 240, 240, 0.527)
+        background-color: rgba(247, 240, 240, 0.76);
     }
 
     .down img {
-        width: 30px;
+        width: 25px;
+        display: block;
         position: absolute;
-        top: 2px;
+        margin-bottom: 90px;
+        margin-right: 20px;
+        
 
     }
 
     .down h4 {
         display: flex;
-        background-color: green;
+        background-color: rgb(4, 185, 4);
         width: 100%;
         padding-top: 10px;
         padding-bottom: 25px;
-        padding-left: 25px;
+        padding-left: 10px;
         margin-top: 20px;
         margin-bottom: 0;
+        margin-right: 25px;
+        justify-content: left;
+        align-items: center;
+        
 
     }
 
     .up h3 {
         display: flex;
-        background-color: green;
+        background-color: rgb(4, 185, 4);
         width: 100%;
         padding-top: 5px;
         padding-bottom: 25px;
-        padding-left: 18px;
-        margin-top: 18px;
-        margin-bottom: 0;
+            margin-right: 25px;
 
 
 
