--- a/styles/form.css
+++ b/styles/form.css
@@ -93,7 +93,6 @@ label {
 
 .sub {
     display: block;
-    margin-top: 1%;
     width: 100%;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -110,10 +109,10 @@ label {
     margin-bottom: 1rem;
 }
 
-.rev input[type="text"] {
+.rev textarea {
     width: 97%;
     padding-bottom: 5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
 }
 
 #yourname {
@@ -168,4 +167,11 @@ input[type="radio"] {
 
 .stars input:checked~label::before {
     content: "\2605"
+}
+
+@media (min-width: 500px) {
+    body {
+        width: 100%;
+    }
+    
 }
