--- a/styles/form.css
+++ b/styles/form.css
@@ -115,6 +115,12 @@ label {
     margin-bottom: 0;
 }
 
+.rev input[type="text"] {
+    width: 97%;
+    padding-bottom: 5rem;
+    margin-bottom: 0;
+}
+
 #yourname {
     padding-bottom: 1rem;
 
