--- a/styles/base.css
+++ b/styles/base.css
@@ -12,7 +12,11 @@
     color: blueviolet;
     display: block;
 }
+.border {
+    border: 1px solid black;
+    border-radius: 1rem 1rem;
 
+}
 
 
 h1 {
@@ -34,6 +38,7 @@ h1 {
 
 }
 
+
 .card h2 {
 
     background-color: aqua;
@@ -49,12 +54,19 @@ h1 {
     padding-bottom: 7px;
 
 }
-
-.time nav {
+ .card section {
+    border: 1px solid black;
+    border-radius: 1rem 1rem;
+}
+.time ul {
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
+}
+.time li {
+    display: flex;
+    margin-top: 2rem;
 }
 
 h3 {
@@ -122,6 +134,9 @@ section h2 {
     border: 1px solid black;
     border-radius: 1em 1em 1em 1em;
 }
+div {
+    margin: 1rem;
+}
 
 .flexman nav {
     display: flex;
@@ -146,4 +161,8 @@ footer {
 }
 .flexman nav {
     background-color: aliceblue;
+}
+header, footer {
+    display: grid;
+
 }
