--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,7 @@
+main {
+    width: 100%;
+}
+
 .griddy {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -12,6 +16,7 @@
     color: blueviolet;
     display: block;
 }
+
 .border {
     border: 1px solid black;
     border-radius: 1rem 1rem;
@@ -54,16 +59,19 @@ h1 {
     padding-bottom: 7px;
 
 }
- .card section {
+
+.card section {
     border: 1px solid black;
     border-radius: 1rem 1rem;
 }
+
 .time ul {
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
 }
+
 .time li {
     display: flex;
     margin-top: 2rem;
@@ -100,16 +108,19 @@ aside {
     padding: 25px;
     width: 150px;
 }
+
 .brazil_box {
     float: left;
     margin-left: 5px;
     margin-right: 10px;
     margin-top: 0;
 }
+
 .brazil_box figcaption {
     text-align: center;
     font-size: small;
 }
+
 article {
     position: relative;
 }
@@ -134,6 +145,7 @@ section h2 {
     border: 1px solid black;
     border-radius: 1em 1em 1em 1em;
 }
+
 div {
     margin: 1rem;
 }
@@ -159,10 +171,13 @@ footer {
     text-align: center;
 
 }
+
 .flexman nav {
     background-color: aliceblue;
 }
-header, footer {
+
+header,
+footer {
     display: grid;
 
 }
