--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,5 @@
 * {
     font-family: "Edu NSW ACT Cursive", cursive;
-    font-optical-sizing: auto;
     font-weight: 200;
     font-style: normal;
 
@@ -151,7 +150,7 @@ div {
 
 .flexman nav {
     display: flex;
-    flex-direction: row nowrap;
+    flex-flow: row nowrap;
     justify-content: space-around;
     margin-bottom: 15px;
     background-color: aqua;
