--- a/styles/place.css
+++ b/styles/place.css
@@ -85,16 +85,15 @@ span {
 
     .down img {
         width: 25px;
-        display: block;
-        position: absolute;
-        margin-bottom: 90px;
-        margin-right: 20px;
+        display: none;
+
 
 
     }
 
-    .down img::after {
-        content: none;
+    .down h4::before {
+        content: "🌦️";
+        margin-right: 2px;
     }
 
     .down h4 {
