--- a/project/styles/site-small.css
+++ b/project/styles/site-small.css
@@ -143,7 +143,7 @@ caption {
 }
 
 footer {
-    background-color: lightblue;
+    background-color: var(--primary-color);
     text-align: center;
 }
 
